[package]
name = "databroker-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databroker-proto = { workspace = true }
hdrhistogram = { version = "7.5.4", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true, features = [
    "std",
    "env",
    "derive",
    "help",
    "error-context",
    "usage",
] }
serde_json = "1.0"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4.21"
stderrlog = "0.6.0"
